@@ -6,6 +6,13 @@ $Id$
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 9:
 
+* XINS/Java Server Framework:
+  - Only _function parameter is supported when using the 
+    StandardCallingConvention, the function parameter is treated as a standard
+    parameter.
+  - Only the function attribute is used to get the function name when using
+    the XMLCallingConvention.
+
 * Build and release process:
   - The Java2HTML pages are now uploaded in a TAR GZ file.
 
